# django-json2model

./: .gitignore  LICENSE  Pipfile  README.md  activate_env.ps1  manage.py  manifest.in  requirements.txt  run_tests.py  setup.cfg
django_json2model/: settings.py  urls.py  wsgi.py
django_json2model_example/: settings.py  urls.py  wsgi.py
dynamicmodels/: __init__.py  apps.py
json2model/: __init__.py  admin.py  apps.py  models.py  services.py  tests.py  views.py
json2model/migrations/: 0001_initial.py  0002_delete_createrequest.py
json2model/services/: __init__.py  data_type_transform.py
json2model/services/dynamic_model/: __init__.py  attribute_types.py  build_json_tmp.py  dynamic_data_instances.py  dynamic_model_admin_handler.py  dynamic_model_builder.py  dynamic_model_mutant.py  dynamic_model_utils.py  failed_atttribute.py  failed_object.py  i_json_iterator.py  mutant_attribute_types.py
json2model/templates/: create_models_from_json.html
json2model/tests/: test_dynamic_data_instance.py  test_dynamic_model_mutant.py  tests.py
json2model/utils/: __init__.py  logging_utils.py
test_app/: models.py
test_project/: settings.py  urls.py
tests/: attribute_that_fails.py  run_data_tests.py  run_tests.py  test_data_type_transform.py  test_dynamic_data_instance.py  test_dynamic_model_mutant.py  test_dynamic_model_utils.py  test_relate_to_user.py  test_settings.py  test_split_into_atts_and_related.py
tests/settings/: __init__.py
tests/test_data/: strava_activity.json
tests/test_data_results/: strava_activity_results.json
tests/test_dynamic_model/: test_dynamic_data_instance.py  test_dynamic_model_mutant.py  test_model_name_prefix.py  test_split_into_atts_and_related.py
