[metadata]
name = django-json2model
version = 0.2.1
description = A Django app to create django models from json based python data structure
long_description = file: README.rst
url = https://github.com/grusinator/django-json2model
author = William Sandvej Hansen
author_email = grusinator@gmail.com
license = MIT
install_requires =
    'django>=3.0'
    'django-picklefield>=0.3.2'
    'django-polymodels>=1.4.6a3'

classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: